# ai-trap-rs

./: .gitignore  .gitmodules  Cargo.toml  generate_cpp.sh  generate_proto.sh  location
src/: main.rs
src/actors/: camera_actor.rs  detection_actor.rs  mod.rs  sessions_actor.rs  state_actor.rs  websocket_actor.rs
src/framework/: actor.rs  mod.rs  streams.rs
src/messages/: camera_frame.rs  mod.rs  protobuf_msg.rs  raw_message.rs
