[package]
name = "ai-trap-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.90.0"

[dependencies]
native_db = "0.8.2"
native_model =  "0.4.20"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.3"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "rt", "macros", "sync"] }
#kameo = {  version = "0.18", features = ["remote"] }
prost = "0.14.1"
chrono = "0.4"
log = "0.4.28"
simplelog = "^0.12.0"
futures-util = "0.3.31"
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
anyhow = "1.0.100"
ort = { version = "2.0.0-rc.10", features = ["acl"]}
photon-rs = "0.3.3"
nokhwa = { version = "0.10.9" , features = ["input-native", "output-threaded"]}
async-channel = "2.5.0"
async-broadcast = "0.7.2"

cxx = "1.0.187"
#components-build = "1.0"
#cc = "1.1.2"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.0"